--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loyalty Constructions & Developers</title>
+  <title>Loyalty Constructions</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -63,6 +63,15 @@
       display: none;
       /* Chrome, Safari, Opera */
     }
+
+    .menu-modal {
+      transition: transform 0.3s ease-in-out;
+      transform: translateX(100%);
+    }
+
+    .menu-modal.open {
+      transform: translateX(0);
+    }
   </style>
 </head>
 
@@ -70,30 +79,70 @@
 
   <!-- Header Section -->
   <header class="bg-white shadow-lg rounded-b-2xl p-4 md:p-6 mb-8 sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center flex-wrap">
-      <div class="flex items-center space-x-2">
+    <div class="container mx-auto flex items-center justify-between">
+      <!-- Left side: Logo and Title -->
+      <div class="flex items-center space-x-4">
         <!-- Loyalty Logo as SVG -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-          class="w-12 h-12 text-orange-600">
+          class="w-12 h-12 text-orange-600 flex-shrink-0">
           <path fill-rule="evenodd"
             d="M12 1.5a5.25 5.25 0 00-5.25 5.25v3a3 3 0 00-3 3v6.75a3 3 0 003 3h10.5a3 3 0 003-3v-6.75a3 3 0 00-3-3v-3c0-2.9-2.35-5.25-5.25-5.25zM12 4.5a2.25 2.25 0 00-2.25 2.25v3a3.75 3.75 0 013.75-3.75h1.5A2.25 2.25 0 0015.75 6.75v3a3.75 3.75 0 013.75 3.75v1.5a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5h.75v-1.5a2.25 2.25 0 00-2.25-2.25v-3zM12 18a3 3 0 01-3-3v-2.25a.75.75 0 01.75-.75h4.5a.75.75 0 01.75.75V15a3 3 0 01-3 3z"
             clip-rule="evenodd" />
         </svg>
-        <div>
+        <div class="text-left hidden md:block">
           <h1 class="text-2xl font-bold text-gray-800">Loyalty Constructions & Developers</h1>
           <p class="text-sm text-gray-500">Building Your Dream Home</p>
         </div>
+        <!-- Mobile-only title -->
+        <div class="text-center md:hidden">
+          <h1 class="text-2xl font-bold text-gray-800">Loyalty Constructions & Developers</h1>
+          <p class="text-xs text-gray-500">Building Your Dream Home</p>
+        </div>
       </div>
-      <nav class="mt-4 md:mt-0">
-        <ul class="flex space-x-4 md:space-x-8 text-gray-600 font-semibold">
+
+      <!-- Right side: Navigation -->
+      <nav class="hidden md:flex">
+        <ul class="flex space-x-8 text-gray-600 font-semibold">
           <li><a href="#about" class="hover:text-orange-600 transition-colors">About Us</a></li>
           <li><a href="#services" class="hover:text-orange-600 transition-colors">Services</a></li>
           <li><a href="#projects" class="hover:text-orange-600 transition-colors">Projects</a></li>
           <li><a href="#contact" class="hover:text-orange-600 transition-colors">Contact</a></li>
         </ul>
       </nav>
+
+      <!-- Mobile Menu Toggle Button (positioned on the right) -->
+      <button id="menu-button" class="text-gray-600 focus:outline-none md:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor"
+          class="w-8 h-8">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+      </button>
     </div>
   </header>
+
+  <!-- Mobile Menu Modal -->
+  <div id="menu-modal"
+    class="menu-modal fixed inset-y-0 right-0 w-64 bg-white shadow-xl z-[99] p-6 flex flex-col justify-between">
+    <div>
+      <div class="flex justify-between items-center mb-8">
+        <span class="text-xl font-bold text-gray-800">MENU</span>
+        <button id="close-menu-button" class="text-gray-600">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
+            stroke="currentColor" class="w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </button>
+      </div>
+      <nav>
+        <ul class="flex flex-col space-y-4 text-gray-700 font-semibold">
+          <li><a href="#about" class="block py-2 hover:text-orange-600 transition-colors">About Us</a></li>
+          <li><a href="#services" class="block py-2 hover:text-orange-600 transition-colors">Services</a></li>
+          <li><a href="#projects" class="block py-2 hover:text-orange-600 transition-colors">Projects</a></li>
+          <li><a href="#contact" class="block py-2 hover:text-orange-600 transition-colors">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 
   <main class="container mx-auto px-4 md:px-6">
 
@@ -262,7 +311,7 @@
           <img src="https://placehold.co/600x400/FF7D00/FFFFFF?text=Load+Bearing+Construction"
             alt="A house built with load bearing construction" class="w-full h-auto rounded-t-2xl object-cover">
           <div class="p-4">
-            <h3 class="text-xl font-bold text-gray-800">Load Bearing Construction</h3>
+            <h3 class="text-xl font-bold text-gray-800">Load Bearing Construction </h3>
             <p class="text-gray-600 mt-1">A project showcasing the strength and durability of our load bearing
               construction methods.</p>
           </div>
@@ -407,6 +456,25 @@
 
         startScrolling();
       }
+
+      // Mobile menu functionality
+      const menuButton = document.getElementById('menu-button');
+      const closeMenuButton = document.getElementById('close-menu-button');
+      const menuModal = document.getElementById('menu-modal');
+
+      menuButton.addEventListener('click', () => {
+        menuModal.classList.add('open');
+      });
+
+      closeMenuButton.addEventListener('click', () => {
+        menuModal.classList.remove('open');
+      });
+      // Close the menu when a link is clicked
+      document.querySelectorAll('#menu-modal nav a').forEach(link => {
+        link.addEventListener('click', () => {
+          menuModal.classList.remove('open');
+        });
+      });
     });
   </script>
 </body>
